cilium-cli/connectivity/builder/manifests/echo-ingress-mutual-authentication-port-range.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: echo-ingress-mutual-authentication-port-range
spec:
  description: "Allow other client port range to contact echo after mutual authentication"
  endpointSelector:
    matchLabels:
      kind: echo
  ingress:
  - fromEndpoints:
    - matchLabels:
        kind: client
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
    toPorts:
    - ports:
      - port: "4096"
        endPort: 8191
        protocol: TCP
    authentication:
      mode: required
